--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "bootstrap": "^5.3.0",
     "commander": "^10.0.1",
     "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "on-change": "^4.0.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.7",
