--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
     "commander": "^10.0.1",
+    "i18next": "^23.2.11",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "on-change": "^4.0.2",
