--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "[![Actions Status](https://github.com/d1abetik/frontend-project-11/workflows/hexlet-check/badge.svg)](https://github.com/d1abetik/frontend-project-11/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
@@ -25,6 +24,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.36.2",
     "@webpack-cli/generators": "^3.0.7",
     "autoprefixer": "^10.4.14",
     "css-loader": "^6.8.1",
