--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-webpack-project",
+  "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/d1abetik/frontend-project-11/workflows/hexlet-check/badge.svg)](https://github.com/d1abetik/frontend-project-11/actions)",
   "main": "index.js",
