--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,6 +11,7 @@ parserOptions:
   sourceType: module
 rules: 
   no-console: 0
+  no-param-reassign: off
   import/extensions:
     - error
     - ignorePackages
